
  Closes #258

* ``missing-raises-doc`` will now check the class hierarchy of the raised exceptions

  .. code-block:: python

    def my_function()
      """My function.

      Raises:
        Exception: if something fails
      """
      raise ValueError

  Closes #4955

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.12.2?
============================
Release date: 2021-11-25

* Fixed a false positive for ``unused-import`` where everything
  was not analyzed properly inside typing guards.

* Fixed a false-positive regression for ``used-before-assignment`` for
  typed variables in the body of class methods that reference the same class

  Closes #5342

* Specified that the ``ignore-paths`` option considers "\" to represent a
  windows directory delimiter instead of a regular expression escape
  character.

* Fixed a crash with the ``ignore-paths`` option when invoking the option
  via the command line.

  Closes #5437

* Fixed handling of Sphinx-style parameter docstrings with asterisks. These
  should be escaped with by prepending a "\".

  Closes #5406

* Add ``endLine`` and ``endColumn`` keys to output of ``JSONReporter``.

  Closes #5380

* Fixed handling of Google-style parameter specifications where descriptions
  are on the line following the parameter name. These were generating
  false positives for ``missing-param-doc``.

  Closes #5452

* Fix false negative for ``consider-iterating-dictionary`` during membership checks encapsulated in iterables
  or ``not in`` checks

  Closes #5323

* ``unused-import`` now check all ancestors for typing guards

  Closes #5316


What's New in Pylint 2.12.1?
============================
Release date: 2021-11-25

* Require Python ``3.6.2`` to run pylint.

  Closes #5065


What's New in Pylint 2.12.0?
============================
Release date: 2021-11-24

* Upgrade astroid to 2.9.0

  Closes #4982
